--- a/style.css
+++ b/style.css
@@ -164,16 +164,15 @@ body {
 }
 
 #reroll-footer-btn {
-    width: 30px;
-    height: 30px;
-    border:1px solid rgba(255, 255, 255, 0.816);
-    border-radius: 50%;
-    font-size: 15px;
+    padding: 5px 9px;
+    border:1px solid rgba(127, 127, 127, 0.816);
     cursor: pointer;
+    border-radius: 8px;
+    font-size: 1em;
     flex-shrink: 0;
-    transition: all 0.2s;
-    background: rgba(251, 251, 251, 0.545);
-    color: rgb(91, 91, 91);
+    transition: background-color 0.2s;
+    background: rgba(251, 251, 251, 0.5);
+    color: rgb(131, 131, 131);
 }
 
 
