--- a/style.css
+++ b/style.css
@@ -880,6 +880,46 @@ body {
     background: white;
 }
 
+button#save-preset-btn.icon-btn{
+    flex: 1;
+    min-width: 120px;
+    padding: 11px 16px;
+    border: none;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    background: #ffffff;
+    color: #333;
+    border: 0.7px solid var(--btn-border-color);
+    
+}
+
+button#del-preset-btn.icon-btn.danger{
+    flex: 1;
+    min-width: 120px;
+    padding: 11px 16px;
+    border: none;
+    border-radius: 10px;
+    font-size: 14px;
+    font-weight: 500;
+    cursor: pointer;
+    transition: all 0.2s ease;
+    background: #ffffff;
+    color: #ff0000;
+    border: 0.7px solid #ff0000
+
+}
+
+.preset-btn-group {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 12px;
+    padding: 20px 10px;   /* 上下多留点空间更好看 */
+}
+
 /* ========== 模型选择那一行 ========== */
 /* 5. 模型选择卡片样式 (修正对齐问题) */
 
@@ -1153,7 +1193,7 @@ button#gist-find{
     align-items: center;
     justify-content: center;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 15px;
     font-weight: 600;
     color: #666;
     position: relative;
@@ -1216,7 +1256,7 @@ button#gist-find{
     }
     .settings-sidebar {
         width: 100%;
-        height: 50px;
+        height: 45px;
         padding: 0;
         flex-direction: row;            /* 横向排列三个标签 */
         border-right: none;
@@ -1547,7 +1587,7 @@ body.dark-mode .tab-item:hover:not(.active) {
 
     body.dark-mode .settings-sidebar {
         width: 100%;
-        height: 50px;
+        height: 45px;
         padding: 0;
         flex-direction: row;
         background: rgba(40, 40, 40, 0.95);
