--- a/style.css
+++ b/style.css
@@ -1361,7 +1361,7 @@ body.dark-mode .app-footer {
 
 /* 输入框区域 */
 body.dark-mode #task-input {
-    border: 1px solid #9d9d9d; /* 稍微加深一点 */
+    border: 1px solid #9d9d9dcc; /* 稍微加深一点 */
     color: #ffffff;
     background: rgba(0, 0, 0, 0.25) !important; /* 深色半透明背景 */
 }
@@ -1376,8 +1376,8 @@ body.dark-mode #task-input::placeholder {
 /* 按钮区域 */
 body.dark-mode #send-button,
 body.dark-mode #reroll-footer-btn {
-    border: 1px solid rgba(182, 182, 182, 0.5);
-    background: rgba(255, 255, 255, 0.1);
+    border: 1px solid rgba(182, 182, 182, 0.3);
+    background: rgba(255, 255, 255, 0.2);
     color: rgba(255, 255, 255, 0.8);
 }
 
@@ -1386,7 +1386,7 @@ body.dark-mode .header-icon-btn.right,
 body.dark-mode .header-icon-btn.left {
     color: #dedede;
     border: 1px solid #ffffff50;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.2);
 }
 
 /* 通讯录列表 */
